--- a/first-website.html
+++ b/first-website.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Me</title>
-<link rel="stylesheet" href="we.css">
+<link rel="stylesheet" href="first-website.css">
 </head>
 <body>
-    <section class="top">
+    <section class="top flexible">
        <div class="half-width">
         <h1>Welcome to</h1>
         <h1><span style="color: red;">Reshad's </span> my world</h1>
@@ -16,8 +16,31 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At enim aspernatur ipsum sequi doloremque unde, blanditiis iure, veniam dolore rem nobis doloribus! Atque expedita soluta maiores sequi sunt quia inventore hic rerum sed debitis a fugiat ab accusantium molestiae dolores esse dolor dignissimos amet nesciunt, harum error quam quis at.</p>
         <a class="link" href="https://github.com/" target="_blank">Hire me</a>
        </div>
-       <div class="half-width" ><img src="jhankar.png"></div>
+       <div class="half-width1" ><img src="jhankar.png"></div>
     </section>
-        
+       <section class="ig flexible"> 
+        <div class="half-width"><img src="jhankar2.png"></div>
+        <div class="half-width">
+            <h2>Dream big section</h2>
+            <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est laboriosam natus id, eius repudiandae, exercitationem molestiae harum expedita consectetur consequatur, suscipit necessitatibus quidem animi unde quaerat officiis itaque placeat ipsa.</h4>
+        </div>
+       </section>
+      
+        <h1>Experiences</h1>
+        <div class="ammu">
+            <div class="experience-item">
+                <h2>Full stack web developer</h2>
+                <h4><span style="color: rgb(255, 195, 14);">2021-Present | Pro level Developer</span></h4>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="experience-item">
+                <h2>Saved level developer</h2>
+                <h4> <span style="color:rgb(255, 195, 14) ;">2021-Present | Programing hero Developer</span></h4>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero</p>
+            </div>
+        </div>
+        <div class="o">
+
+        </div>
 </body>
 </html>
